# diplomma

./: .env.example  .gitignore  AGENT_BRIEF.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
assignments/: 02.md  04.md  07.md  11.md  OUTLINE.md  README.md
data/: README.md  SOURCES.md  content_audit.csv  coverage_report.md  manifest.csv
descriptions/: 01.md  03.md  05.md  06.md  08.md  09.md  10.md  12_data_collection_execution_plan.md  13_l1_collector_mvp.md  README.md  data_collection_spec.md  rekomendacja_jdg_chatbot.md
main_project/: CLAUDE.md
scripts/: audit_content.py  build_coverage_report.py  build_coverage_seed.py  build_source_registry.py  cleanup_low_quality.py  cleanup_off_topic_pip.py  cleanup_pip.py  cleanup_pip_pracownik.py  cleanup_pure_forms.py  collect_l1_legislation.py  common.py  debug_podatki.py  extract_text_corpus.py  fetch_eureka_kis.py  fetch_extra_eurlex.py  fetch_govpl_html.py  fetch_govpl_pages.py  fetch_hot_biznes.py  fetch_hot_govpl.py  fetch_hot_kis.py  fetch_l1_consolidated.py  fetch_l1_must.py  fetch_l1_regs.py  fetch_l2_biznes.py  fetch_l2_biznes_deeper.py  fetch_l2_biznes_focused.py  fetch_l2_biznes_full.py  fetch_l2_pip.py  fetch_l2_podatki.py  fetch_l2_uodo.py  fetch_l2_zus.py  fetch_wikipedia.py  fix_l1_must.py  fix_sidecar_quality.py  qa_dataset_status.py  quarantine_from_audit.py  register_local_sources.py  retag_by_body.py  retag_manifest.py  tag_ceidg_subtopics.py  (+2 more)
thesis_elements/: CLAUDE.md
thesis_research/: 02_konspekt_v3.2_skeleton.md  02_konspekt_v3_FINAL.docx  02b_konspekt_v3_updates.md  (+14 more)
(+12252 files in other folders)
