[project]
name = "diplomma"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "httpx>=0.27",
    "lxml>=6.1.0",
    "numpy>=2.4.5",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.9.0",
    "pyrefly>=0.45.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.13",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["main_project/tests"]
python_files = ["test_*.py"]
addopts = "-ra -v --strict-markers"
markers = [
    "network: requires network access (skipped by default; run with -m network)",
]
